force-app/main/default/objects/Sub_Unit__c/Sub_Unit__c.object-meta.xml
<CustomObject>
    <label>Sub Unit</label>
    <nameField>
        <label>Sub Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>