force-app/main/default/objects/Sub_Unit__c/fields/Sub_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Unit_Code__c</fullName>
    <displayFormat>SU-{000000}</displayFormat>
    <label>Sub Unit Code</label>
    <type>AutoNumber</type>
</CustomField>