force-app/main/default/objects/Sub_Unit__c/fields/Sub_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Sub_Unit_Price__c</fullName>
    <label>Sub Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>