force-app/main/default/objects/Sub_Unit__c/fields/Sub_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Unit_Status__c</fullName>
    <label>Sub-Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>